samples/_failures_safe/1761645755_ef8702_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9d46cc5.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_c9d46cc5.c:172:5: error: expected declaration or statement at end of input
  172 |     }
      |     ^
